--- a/android/CanoeForTwo/app/src/main/AndroidManifest.xml
+++ b/android/CanoeForTwo/app/src/main/AndroidManifest.xml
@@ -2,15 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.duarte.canoefortwo" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/game_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
+
         <activity
             android:name=".ConnectMenu"
-            android:label="@string/title_activity_connect_menu" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
