--- a/android/CanoeForTwo/app/src/main/AndroidManifest.xml
+++ b/android/CanoeForTwo/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
         <activity
             android:name=".ConnectMenu"
+            android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,10 +23,12 @@
         </activity>
         <activity
             android:name=".ChooseSide"
-            android:label="@string/title_activity_choose_side" >
+            android:label="@string/title_activity_choose_side"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".PlayActivity"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_play"
             android:theme="@style/FullscreenTheme" >
