--- a/android/CanoeForTwo/app/src/main/AndroidManifest.xml
+++ b/android/CanoeForTwo/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
 
         <activity
-            android:name=".ConnectMenu"
+            android:name=".menus.ConnectMenu"
             android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
@@ -22,12 +22,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ChooseSide"
+            android:name=".menus.ChooseSide"
             android:label="@string/title_activity_choose_side"
             android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name=".PlayActivity"
+            android:name=".menus.PlayActivity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_play"
